feature: wire topic post and topic/id into the API
